# CNN-Cuda

./: .gitignore  MLP.cu  README.md  todo.txt
kernels/cublas-cudnn/: pro.cu
kernels/custom_cuda/: CMakeLists.txt  activations.cu  layerKernels.cu  layers.cu  layers.hpp  main.cpp  main.cu  neuralnet.cpp  neuralnet.cu  neuralnet.hpp  utils.cuh  utils.hpp
kernels/custom_cuda/.cache/clangd/index/: SGD_test.cu.CDA5D82C2A97B301.idx  container.cu.33E116A23D9AE60F.idx  container.cu.79B5628A53EC31A9.idx  container.cuh.1DF5A37A7882D298.idx  container.cuh.B9AD194795E9640E.idx  container_test.cu.D31EEC5C9ED4AB89.idx  conv.cu.065B1380BC52F894.idx  conv.cu.375DDFB41C699892.idx  conv.cuh.006A4572114DCD14.idx  conv_test.cu.746E0AF8F46911EF.idx  dataloader.cu.077B23090889F437.idx  dataloader.cu.2FE2C14C29729A23.idx  dataloader.cuh.19BFCFB639E1D1A5.idx  dataloader.cuh.47892C8E02042A7A.idx  entropyLoss.cu.7DE72BE998611596.idx  entropyLoss.cu.F316571D5ABA8ED5.idx  entropy_test.cu.B42FAB51EDDD0731.idx  flatten.cu.935F6AED0F6A4474.idx  flatten.cu.CD72465275E8840F.idx  flatten.cuh.8843B048E09338FE.idx  layers.cu.546578E5129F3188.idx  layers.cuh.08455BA2D8B42DCD.idx  layers.cuh.EC5FD6A9C7874F72.idx  linear.cu.4290CDCB440F59A5.idx  linear.cu.4B344838096872D7.idx  linear.cuh.A5F0295EDC1F3420.idx  linear.cuh.B11FC54014E6DF1D.idx  linear_test.cu.276C92469E8DB69F.idx  main.cpp.79E9166133E11CBD.idx  main.cpp.A07FC74A95F8D210.idx  main.cu.0C8A79E3886C5DC2.idx  main.cu.23B2652CBD3FF110.idx  main_test.cu.2B8F2DE67B528F2B.idx  maxPool.cu.559D7E3DB0F531D8.idx  maxPool.cu.61153461605C4E3E.idx  maxPool.cuh.976EAFFEC50B2BA8.idx  maxpool_test.cu.447834E1DCB66726.idx  neuralnet.cpp.93B4AF9BA3329FFE.idx  neuralnet.cpp.CE85C419822CD03A.idx  neuralnet.cu.0B17E21525069EC7.idx  (+18 more)
kernels/custom_cuda/Data/: container.cu  dataloader.cu  dataloader.cuh  storage.cu  storage.hpp
kernels/custom_cuda/Layers/: conv.cu  conv.cuh  conv.hpp  flatten.cuh  layers.cu  layers.cuh  layers.hpp  linear.cu  linear.cuh  linear.hpp  maxPool.cuh  maxPool.hpp  operators.cu  operators.cuh  relu.cuh  relu.hpp  softmax.cuh
kernels/custom_cuda/Optimizer/: optimizer.cuh  sgd-std.cu  sgd-std.cuh
kernels/custom_cuda/tests/: main_test.cu
python/: experiments.ipynb  python_reference.ipynb  pytorch_MLP.ipynb
python/.ipynb_checkpoints/: experiments-checkpoint.ipynb
